# harold-and-claude

./: .gitattributes  .gitignore  CLAUDE.md  README.md  justfile
backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
backend/app/: PATTERNS.md  config.py  main.py  runtime.py
backend/app/adapters/: capture.py  history.py  postgres.py
backend/app/auth/: __init__.py  entities.py  routes.py  schemas.py  security.py
backend/app/cli/: bootstrap_admin.py  export_openapi.py  redact_csv.py  seed_db.py
backend/app/cli/seeds/: README.md
backend/app/domain/: auth.py  contract.py
backend/app/domain/commands/: __init__.py  contract.py
backend/app/engine/: audit.py  caller.py  command.py  crud.py  dispatcher.py  pagination.py  predicates.py
backend/app/features/: __init__.py
backend/app/features/contracts/: __init__.py  commands.py  entities.py  queries.py  routes.py  schemas.py
backend/app/framework/: adapter.py  audit.py  auth.py  caller.py  capture.py  command.py  crud.py  db.py  dispatcher.py  error_handlers.py  exceptions.py  history.py  locks.py  predicates.py  runtime.py
backend/app/http/: error_handlers.py  health.py  pagination.py
backend/app/routes/: auth.py  contracts.py
backend/migrations/: env.py
backend/migrations/versions/: 0377af236b82_baseline.py  162ac1ebc916_audit_metadata_columns.py  25ea83fcec61_auth_substrate.py  6dd5906ef088_contract.py  b555ac8d13da_history_infrastructure.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_adapter.py  test_auth.py  test_capture_sink_integration.py  test_contract.py  test_contract_routes.py  test_dispatcher.py  test_healthcheck.py  test_pagination.py  test_postgres.py  test_predicates.py  test_seed_db.py
backend/tests/fixtures/smoketest/: __init__.py  commands.py  entities.py  invariants.py
contracts/: openapi.json
frontend/: CLAUDE.md  eslint.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
planning/: DRIFTS.md  _file-rules.md  _workflow.md  architecture.md  data-model.md  decisions.md  domain-model.md  framework.md  handoff.md  history-patterns.md  (+7 more)
(+78 files in other folders)
