[project]
name = "sca-tracker-backend"
version = "0.0.0"
description = "Backend for sca-tracker"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "pyright>=1.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers (Depends, Cookie, Header, Query, Path,
# Body, File, Form, Security) are canonical in default-argument position;
# B008 is a false positive for these. Listing them here suppresses B008 only
# for these call expressions, not globally.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Cookie",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
